# copy-file-gen-tool

./: README.md
copyGenToolRoot/: README.md  pyproject.toml
copyGenToolRoot/copyGenTool/: cli.py  config.py  core.py
